--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </select>
             </div>
             <div class="col-md-3">
-                <button onclick="updateChart()">submit</button>
+                <button onclick="drawChart()">submit</button>
             </div>
         </div>
         <div class="row">
