--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </table>
             </div>
         </div>
-        <div class="row my-4">
+        <div class="row align-items-end my-4">
             <div class="col-md-3">
                 <label for="start" class="form-label">Start Date</label>
                 <input type="date" class="form-control" id="startDate">
@@ -62,7 +62,7 @@
                 <label for="end" class="form-label">End Date</label>
                 <input type="date" class="form-control" id="endDate">
             </div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <label for="resolution" class="form-label">Resolution</label>
                 <select id="resolution" class="form-select">
                     <option value="1">1 Day</option>
@@ -70,9 +70,9 @@
                     <option value="5">5 Days</option>
                     <option value="7">1 Week</option>
                 </select>
-            </div>
+            </div> -->
             <div class="col-md-3">
-                <button onclick="drawChart()">submit</button>
+                <button class="btn" onclick="updateChart()">submit</button>
             </div>
         </div>
         <div class="row">
