--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <label for="end" class="form-label">End Date</label>
                 <input type="date" class="form-control" id="endDate">
             </div>
-            <!-- <div class="col-md-3">
+            <div class="col-md-3">
                 <label for="resolution" class="form-label">Resolution</label>
                 <select id="resolution" class="form-select">
                     <option value="1">1 Day</option>
@@ -70,7 +70,7 @@
                     <option value="5">5 Days</option>
                     <option value="7">1 Week</option>
                 </select>
-            </div> -->
+            </div>
             <div class="col-md-3">
                 <button class="btn" onclick="updateChart()">submit</button>
             </div>
